// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-badge-beta #render should render component as expected (1) 1`] = `
<gux-badge-beta>
  <mock:shadow-root>
    <div class="gux-badge gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  default
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (2) 1`] = `
<gux-badge-beta color="neutral">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  default explicit
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (3) 1`] = `
<gux-badge-beta color="green">
  <mock:shadow-root>
    <div class="gux-badge gux-green">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green
      </div>
    </div>
  </mock:shadow-root>
  sucess
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (4) 1`] = `
<gux-badge-beta color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow
      </div>
    </div>
  </mock:shadow-root>
  warning
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (5) 1`] = `
<gux-badge-beta color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red
      </div>
    </div>
  </mock:shadow-root>
  danger
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (6) 1`] = `
<gux-badge-beta bold="" color="green">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-green">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green bold
      </div>
    </div>
  </mock:shadow-root>
  success bold
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (7) 1`] = `
<gux-badge-beta bold="" color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow bold
      </div>
    </div>
  </mock:shadow-root>
  warning bold
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (8) 1`] = `
<gux-badge-beta bold="" color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red bold
      </div>
    </div>
  </mock:shadow-root>
  danger bold
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (9) 1`] = `
<gux-badge-beta color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  warning icon
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (10) 1`] = `
<gux-badge-beta color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  danger icon
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (11) 1`] = `
<gux-badge-beta color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  warning icon
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (12) 1`] = `
<gux-badge-beta bold="" color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  warning bold icon
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (13) 1`] = `
<gux-badge-beta bold="" color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  danger bold icon
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (14) 1`] = `
<gux-badge-beta bold="" color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  warning bold icon
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (15) 1`] = `
<gux-badge-beta bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  default bold
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (16) 1`] = `
<gux-badge-beta bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  default bold icon
</gux-badge-beta>
`;
